--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
 # Need to install this
 # $ brew install reattach-to-user-namespace
 ## invoke reattach-to-user-namespace every time a new window/pane opens
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Look good
 set-option -g default-terminal "screen-256color"
