--- a/tmux.conf
+++ b/tmux.conf
@@ -61,3 +61,6 @@ set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:X
 
 # use C-b v to paste the tmux buffer
 bind v paste-buffer
+
+#keep the window name fixed
+set-option -g allow-rename off 
