enbale the window scrolling

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,8 +33,6 @@ set-window-option -g mouse on
 # set up layouts
 # set main-pane-width 130
 
-# Change cursor in vim to distinguish between insert and command mode
-#set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
 
 # scrollback buffer size increase
 set -g history-limit 500000
@@ -62,5 +60,17 @@ set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:X
 # use C-b v to paste the tmux buffer
 bind v paste-buffer
 
-#keep the window name fixed
-set-option -g allow-rename off 
+
+#set the default shell as zsh
+set-option -g default-shell /bin/zsh
+#set-option -g default-command /bin/zsh
+
+#keep the windown name fixed
+set-option -g allow-rename off
+#set-window-option -g automatic-rename off
+
+
+#
+#enable the function of scrolling up and down
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"  
+bind -n WheelDownPane select-pane -t= \; send-keys -M
