--- a/tmux.conf
+++ b/tmux.conf
@@ -74,3 +74,24 @@ set-option -g allow-rename off
 #enable the function of scrolling up and down
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"  
 bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+######################--start------handle the issue that we are not able to select and copy in tmux terminal
+#Note: pls first install this library by the command: brew install reattach-to-user-namespace
+#link1: https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+#link2: https://evertpot.com/osx-tmux-vim-copy-paste-clipboard/
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+# short-cut key: " ctrl+b + [" start the copy function
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+######################--finish------handle the issue that we are not able to select and copy in tmux terminal
