--- a/tmux.conf
+++ b/tmux.conf
@@ -76,8 +76,7 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 ######################--start------handle the issue that we are not able to select and copy in tmux terminal
-#Note: pls first install this library by the command: 
-# brew install reattach-to-user-namespace
+#Note: pls first install this library by the command: brew install reattach-to-user-namespace
 #link1: https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 #link2: https://evertpot.com/osx-tmux-vim-copy-paste-clipboard/
 set-option -g default-command "reattach-to-user-namespace -l zsh"
